--- a/index.html
+++ b/index.html
@@ -83,46 +83,41 @@
     <section class="episodios" id="Episodios">
       <h1 class="fontF-title tamaño_titulo ttl_blanco tituloE">Episodios</h1>
       <div class="podcast_container">
-        <div>
-          <iframe
-            src="https://open.spotify.com/embed-podcast/episode/6WYxGF1wu7JpuVPuHwtQ1z"
-            width="100%"
-            height="232"
-            frameborder="0"
-            allowtransparency="true"
-            allow="encrypted-media"
-          ></iframe>
-        </div>
-        <div>
-          <iframe
-            src="https://open.spotify.com/embed-podcast/episode/3MlzphRDeYSmy7vVjyFPrU"
-            width="100%"
-            height="100%"
-            frameborder="0"
-            allowtransparency="true"
-            allow="encrypted-media"
-          ></iframe>
-        </div>
-        <div>
-          <iframe
-            src="https://open.spotify.com/embed-podcast/episode/3FUxCdlOsJBW5tLWFxygdl"
-            width="100%"
-            height="232"
-            frameborder="0"
-            allowtransparency="true"
-            allow="encrypted-media"
-          ></iframe>
-        </div>
-        <div>
-          <iframe
-            src="https://open.spotify.com/embed-podcast/episode/2ycdJIj8hLs39xE4e6EhyD"
-            width="100%"
-            height="232"
-            frameborder="0"
-            allowtransparency="true"
-            allow="encrypted-media"
-          ></iframe>
-        </div>
+        <iframe
+          src="https://open.spotify.com/embed-podcast/episode/6WYxGF1wu7JpuVPuHwtQ1z"
+          width="100%"
+          height="232px"
+          frameborder="0"
+          allowtransparency="true"
+          allow="encrypted-media"
+        ></iframe>
+
+        <iframe
+          src="https://open.spotify.com/embed-podcast/episode/3MlzphRDeYSmy7vVjyFPrU"
+          width="100%"
+          height="232px"
+          frameborder="0"
+          allowtransparency="true"
+          allow="encrypted-media"
+        ></iframe>
+
+        <iframe
+          src="https://open.spotify.com/embed-podcast/episode/3FUxCdlOsJBW5tLWFxygdl"
+          width="100%"
+          height="232px"
+          frameborder="0"
+          allowtransparency="true"
+          allow="encrypted-media"
+        ></iframe>
+
+        <iframe
+          src="https://open.spotify.com/embed-podcast/episode/2ycdJIj8hLs39xE4e6EhyD"
+          width="100%"
+          height="232px"
+          frameborder="0"
+          allowtransparency="true"
+          allow="encrypted-media"
+        ></iframe>
       </div>
     </section>
     <!-- Fin Seccion de Episodios-->
