ultimos cambios, responsive tablet, nosotros

--- a/index.html
+++ b/index.html
@@ -124,11 +124,13 @@
 
     <!-- Seccion de dónde venimos-->
     <section class="de-donde-venimos" id="Nosotros">
-      <img
-        src="./assets/img/phone.png"
-        alt="The Secret History of Women in Coding"
-        class="phone"
-      />
+      <div class="contenedor-phone">
+        <img
+          src="./assets/img/phone.png"
+          alt="The Secret History of Women in Coding"
+          class="phone"
+        />
+      </div>
       <div class="informacion">
         <h1 class="fontF-title tamaño_titulo tituloDDV">De dónde venimos</h1>
         <p class="d_donde_v">
