media queries tablet

--- a/index.html
+++ b/index.html
@@ -200,19 +200,27 @@
       </h1>
       <div class="imagenes">
         <div class="contenedor-temas">
-          <img src="./assets/img/icon1.svg" alt="Costoso" />
+          <img src="./assets/img/icon1.svg" alt="Costoso" class="icono-tema" />
           <p class="tema">Trabajo remoto</p>
         </div>
         <div class="contenedor-temas">
-          <img src="./assets/img/icon2.svg" alt="Se agota rapido" />
+          <img
+            src="./assets/img/icon2.svg"
+            alt="Se agota rapido"
+            class="icono-tema"
+          />
           <p class="tema">Repensando la programación</p>
         </div>
         <div class="contenedor-temas">
-          <img src="./assets/img/icon3.svg" alt="Galardonado" />
+          <img
+            src="./assets/img/icon3.svg"
+            alt="Galardonado"
+            class="icono-tema"
+          />
           <p class="tema">Bases del código</p>
         </div>
         <div class="contenedor-temas">
-          <img src="./assets/img/icon4.svg" alt="Popular" />
+          <img src="./assets/img/icon4.svg" alt="Popular" class="icono-tema" />
           <p class="tema">Seguridad informática</p>
         </div>
       </div>
