--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Podcast Channel</title>
+    <link rel="icon" type="image/png" href="./assets/img/favicon.png" />
     <link rel="stylesheet" href="./assets/styles.css" />
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -54,10 +55,18 @@
       </label>
 
       <ul class="menu-mobile">
-        <li class="menu-mobile-item"><a href="#Episodios">EPISODIOS</a></li>
-        <li class="menu-mobile-item"><a href="#Nosotros">NOSOTROS</a></li>
-        <li class="menu-mobile-item"><a href="#Entrevistas">ENTREVISTAS</a></li>
-        <li class="menu-mobile-item"><a href="#Topicos">TÓPICOS</a></li>
+        <li class="menu-mobile-item">
+          <a href="#Episodios" class="nav">EPISODIOS</a>
+        </li>
+        <li class="menu-mobile-item">
+          <a href="#Nosotros" class="nav">NOSOTROS</a>
+        </li>
+        <li class="menu-mobile-item">
+          <a href="#Entrevistas" class="nav">ENTREVISTAS</a>
+        </li>
+        <li class="menu-mobile-item">
+          <a href="#Topicos" class="nav">TÓPICOS</a>
+        </li>
       </ul>
       <!-- End Menu Mobile -->
     </header>
@@ -240,21 +249,46 @@
     <footer class="footer">
       <p class="cpr">© 2019— Hello blue pale dot</p>
       <div class="redes-sociales">
-        <a href="https://www.spotify.com/co/" class="iconos" target="_blank"
-          ><i class="fab fa-spotify"></i
-        ></a>
-        <a href="https://www.instagram.com/" class="iconos" target="_blank"
-          ><i class="fab fa-instagram"></i
-        ></a>
-        <a href="https://twitter.com/" class="iconos" target="_blank"
-          ><i class="fab fa-twitter"></i
-        ></a>
-        <a href="https://www.facebook.com/" class="iconos" target="_blank"
-          ><i class="fab fa-facebook"></i
-        ></a>
-        <a href="https://web.telegram.org/" class="iconos" target="_blank"
-          ><i class="fab fa-telegram"></i
-        ></a>
+        <a
+          href="https://www.spotify.com/co/"
+          class="iconos"
+          target="_blank"
+          title="Spotify"
+        >
+          <i class="fab fa-spotify sptf"></i>
+        </a>
+        <a
+          href="https://www.instagram.com/"
+          class="iconos"
+          target="_blank"
+          title="Instagram"
+        >
+          <i class="fab fa-instagram instgrm"></i>
+        </a>
+        <a
+          href="https://twitter.com/"
+          class="iconos"
+          target="_blank"
+          title="Twitter"
+        >
+          <i class="fab fa-twitter twttr"></i>
+        </a>
+        <a
+          href="https://www.facebook.com/"
+          class="iconos"
+          target="_blank"
+          title="Facebook"
+        >
+          <i class="fab fa-facebook fcbk"></i>
+        </a>
+        <a
+          href="https://web.telegram.org/"
+          class="iconos"
+          target="_blank"
+          title="Telegram"
+        >
+          <i class="fab fa-telegram tlgrm"></i>
+        </a>
       </div>
     </footer>
     <!-- Fin Footer -->
