--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         >
       </h1>
 
-      <div class="description">
+      <div class="description font_size_texto">
         <p>
           El portal de podcasts que explora el mundo de la programación y la
           tecnología. Nuevos episodios, todos los jueves cada 15 días.
@@ -90,7 +90,7 @@
 
     <!-- Seccion de Episodios-->
     <section class="episodios" id="Episodios">
-      <h1 class="fontF-title tamaño_titulo ttl_blanco tituloE">Episodios</h1>
+      <h1 class="fontF-title font_size_titulo ttl_blanco tituloE">Episodios</h1>
       <div class="podcast_container">
         <iframe
           src="https://open.spotify.com/embed-podcast/episode/6WYxGF1wu7JpuVPuHwtQ1z"
@@ -141,13 +141,13 @@
         />
       </div>
       <div class="informacion">
-        <h1 class="fontF-title tamaño_titulo tituloDDV">De dónde venimos</h1>
-        <p class="d_donde_v">
+        <h1 class="fontF-title font_size_titulo tituloDDV">De dónde venimos</h1>
+        <p class="font_size_texto">
           Our posturings, our imagined self-importance, the delusion that we
           have some privileged position in the Universe, are challenged by this
           point of pale light.
         </p>
-        <p class="d_donde_v p2">
+        <p class="font_size_texto p2">
           Our planet is a lonely speck in the great enveloping cosmic dark. In
           our obscurity, in all this vastness, there is no hint that help will
           come from elsewhere to save us from ourselves.
@@ -158,7 +158,9 @@
 
     <!-- Seccion Invitadas/os estelares-->
     <section id="Entrevistas">
-      <h1 class="fontF-title tamaño_titulo tituloIE">Invitadas/os estelares</h1>
+      <h1 class="fontF-title font_size_titulo tituloIE">
+        Invitadas/os estelares
+      </h1>
       <div class="container-grid">
         <div class="container-img">
           <img
@@ -204,7 +206,7 @@
 
     <!-- seccion Algunos de nuestros temas-->
     <section class="nuestros-temas" id="Topicos">
-      <h1 class="fontF-title tamaño_titulo tituloANT">
+      <h1 class="fontF-title font_size_titulo tituloANT">
         Algunos de nuestros temas
       </h1>
       <div class="imagenes">
@@ -238,7 +240,7 @@
 
     <!-- seccion ultimas novedades?-->
     <section class="ultimas-novedades">
-      <h1 class="fontF-title tamaño_titulo ttl_blanco tituloQUN">
+      <h1 class="fontF-title font_size_titulo ttl_blanco tituloQUN">
         ¿Querés las últimas novedades?
       </h1>
       <button class="btn btn-escucha-episodios">ESCUCHÁ LOS EPISODIOS</button>
