ultimos ajustes, listo para entregar

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
       <!-- End Menu Mobile -->
     </header>
 
+    <!-- Sección Hello World-->
     <section class="hello-world">
       <h1 class="titleH fontF-title">
         Hello <span class="world fontF-title">world</span> pale blue dot<span
@@ -87,6 +88,7 @@
       </div>
       <button class="btn btn-conoce-mas">Conoce más</button>
     </section>
+    <!-- fin sección Hello World-->
 
     <!-- Seccion de Episodios-->
     <section class="episodios" id="Episodios">
