--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           tecnología. Nuevos episodios, todos los jueves cada 15 días.
         </p>
       </div>
-      <button class="btn btn-conoce-mas">Conoce más</button>
+      <a class="btn btn-conoce-mas" href="#Nosotros">Conoce más</a>
     </section>
     <!-- fin sección Hello World-->
 
@@ -245,7 +245,9 @@
       <h1 class="fontF-title font_size_titulo ttl_blanco tituloQUN">
         ¿Querés las últimas novedades?
       </h1>
-      <button class="btn btn-escucha-episodios">ESCUCHÁ LOS EPISODIOS</button>
+      <a class="btn btn-escucha-episodios" href="#Episodios">
+        ESCUCHÁ LOS EPISODIOS
+      </a>
     </section>
     <!-- fin seccion ultimas novedades? -->
 
